# template-tools

./: .gitignore
cmake/FindLocal/: build.sh
cmake/FindLocal/good_print/: CMakeLists.txt
cmake/FindLocal/myapp/: CMakeLists.txt
cmake/FindPackage/: run.sh
cmake/FindPackage/good_print/: CMakeLists.txt  mylib.c  mylib.h
cmake/FindPackage/myapp/: CMakeLists.txt  main.c
cmake/OneCMake/: CMakeLists.txt  build.sh
cmake/OneCMake/good_print/: CMakeLists.txt
cmake/OneCMake/myapp/: CMakeLists.txt
cmake/package-example/: run.sh
data/: test.json
python/flask/send_file_json/: client.py  server.py
python/opencv/draw/: draw.py
python/opencv/draw_cn_txt/: download.sh  draw.py
shell/docker/: build.sh  hello_world.bashrc
